--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,4 @@
-// {
-//   "presets": ["next/babel"],
-//   "plugins": []
-// }
 {
-  "presets": [["@babel/preset-env"]],
-  "plugins": [["@babel/transform-runtime"]],
-  "env": {
-    "development": {
-      "sourceMaps": true,
-      "retainLines": true
-    }
-  }
+  "presets": ["next/babel"],
+  "plugins": []
 }
